k8s/base/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-client-deployment
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: server
  template:
    metadata:
      labels:
        name: server
    spec:
      containers:
        - name: server
          # image: avinashrajure/fca-server:ff21d08f12884adaf637a4fd3d18a1c2f90c6e5a
          image: server-image
          ports:
            - containerPort: 7777
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: server
spec:
  selector:
    name: server
  ports:
    - name: http
      port: 7777
      targetPort: 7777
